# dynamicDetection

./: CMakeLists.txt  README.md  dynamic_object_detection.cpp  package.xml
