<?xml version="1.0"?>
<package format="2">
  <name>dynamic_object_detection</name>
  <version>0.0.0</version>
  <description>The dynamic_object_detection package</description>

  <maintainer email="zubimuzaffar@gmail.com">zubair</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/obstacle_avoidance</url>
  <author email="zubimuzaffar@gmail.com">zubair</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend> geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend> nav_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>laser_geometry</exec_depend>

</package>
